wip mobile nav - scrollbar issues

--- a/css/index.css
+++ b/css/index.css
@@ -139,7 +139,7 @@ html {
 
 .all-content {
   height: 100%;
-  width: 100%;
+  width: 100vw;
   position: relative;
   background-color: white;
   transition: right 2s ease;
@@ -155,7 +155,7 @@ html {
   z-index: -1;
   background-color: #262834;
   opacity: 0;
-  transition: opacity 2s ease;
+  transition: opacity 3s ease;
 }
 
 header, main, section {
@@ -816,11 +816,14 @@ nav {
 }
 
 .mobile-menu {
+  position: fixed;
   width: 21rem;
-  height: 100vh;
+  height: 100%;
   position: fixed;
   top: 0;
   right: 0;
+  bottom: 0;
+  overflow: scroll;
   background-color: #262834;
   color: white;
   z-index: -999;
